--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-numpy==2.2.6
+numpy==2.3.0
     # via
     #   -r requirements.in
     #   faiss-cpu
@@ -25,6 +25,12 @@ packaging==25.0
     # via faiss-cpu
 pygments==2.19.1
     # via rich
+pyqt6==6.9.1
+    # via -r requirements.in
+pyqt6-qt6==6.9.1
+    # via pyqt6
+pyqt6-sip==13.10.2
+    # via pyqt6
 pyreadline3==3.5.4
     # via humanfriendly
 python-dotenv==1.1.0
