WIP: Fixed matching fail on loaded index. faster json dump

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ numpy==2.3.0
     #   opencv-python
 opencv-python==4.11.0.86
     # via -r requirements.in
+orjson==3.10.18
+    # via -r requirements.in
 packaging==25.0
     # via faiss-cpu
 pygments==2.19.1
