--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ markdown-it-py==3.0.0
     # via rich
 mdurl==0.1.2
     # via markdown-it-py
-numpy==2.3.0
+numpy==2.3.1
     # via
     #   -r requirements.in
     #   faiss-cpu
@@ -24,9 +24,13 @@ opencv-python==4.11.0.86
 orjson==3.10.18
     # via -r requirements.in
 packaging==25.0
-    # via faiss-cpu
-pygments==2.19.1
-    # via rich
+    # via
+    #   faiss-cpu
+    #   qtpy
+pygments==2.19.2
+    # via
+    #   rich
+    #   superqt
 pyqt6==6.9.1
     # via -r requirements.in
 pyqt6-qt6==6.9.1
@@ -35,15 +39,20 @@ pyqt6-sip==13.10.2
     # via pyqt6
 pyreadline3==3.5.4
     # via humanfriendly
-python-dotenv==1.1.0
+python-dotenv==1.1.1
     # via -r requirements.in
+qtpy==2.4.3
+    # via superqt
 reactivex==4.0.4
     # via -r requirements.in
 rich==14.0.0
     # via rich-click
 rich-click==1.8.9
     # via -r requirements.in
+superqt==0.7.5
+    # via -r requirements.in
 typing-extensions==4.14.0
     # via
     #   reactivex
     #   rich-click
+    #   superqt
